syntax = "proto3";

option go_package = "./order_proto_gen";

import 'google/protobuf/timestamp.proto';
import 'order_metadata.proto';

message GetCouponRequest {
  int64 limit = 1;
  int64 page = 2;
  optional string code = 3;
  optional string discount_type = 4;
  optional google.protobuf.Timestamp start_date = 5;
  optional google.protobuf.Timestamp end_date = 6;
  optional bool is_active = 7;
}

message GetCouponByClientRequest {
  int64 limit = 1;
  int64 page = 2;
  google.protobuf.Timestamp current_date = 3;
}

message GetCouponResponse {
  repeated CouponResponse data = 1;
  OrderMetadata metadata = 2;
}

message CouponResponse {
  string id = 1;
  string code = 2;
  string name = 3;
  string discount_type = 4;
  double discount_value = 5;
  google.protobuf.Timestamp start_date = 6;
  google.protobuf.Timestamp end_date = 7;
  double minimum_order_amount = 8;
  double maximum_discount_amount = 9;
  int64 usage_limit = 10;
  int64 usage_count = 11;
  string currency = 12;
  bool is_active = 13;
}

message GetDetailCouponRequest {
  string id = 1;
}

message GetDetailCouponResponse {
  string id = 1;
  string code = 2;
  string name = 3;
  string description = 4;
  string discount_type = 5;
  double discount_value = 6;
  double maximum_discount_amount = 7;
  double minimum_order_amount = 8;
  string currency = 9;
  google.protobuf.Timestamp start_date = 10;
  google.protobuf.Timestamp end_date = 11;
  int64 usage_limit = 12;
  int64 usage_count = 13;
  bool is_active = 14;
  google.protobuf.Timestamp created_at = 15;
  google.protobuf.Timestamp updated_at = 16;
}

message UpdateCouponRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string discount_type = 4;
  double discount_value = 5;
  double maximum_discount_amount = 6;
  double minimum_order_amount = 7;
  google.protobuf.Timestamp start_date = 8;
  google.protobuf.Timestamp end_date = 9;
  int64 usage_limit = 10;
  bool is_active = 11;
}

message UpdateCouponResponse {}

message DeleteCouponRequest {
  string id = 1;
}

message DeleteCouponResponse{}

message CreateCouponRequest {
  string name = 1;
  string description = 2;
  string discount_type = 3;
  double discount_value = 4;
  double maximum_discount_amount = 5;
  double minimum_order_amount = 6;
  string currency = 7;
  google.protobuf.Timestamp start_date = 8;
  google.protobuf.Timestamp end_date = 9;
  int64 usage_limit = 10;
}

message CreateCouponResponse{}